@startuml

title __RENDERERS's Class Diagram__\n

  namespace orders {
    namespace view.renderers {
      class orders.view.renderers.GalleryRenderer {
          ~ pane : JPanel
          + GalleryRenderer()
          + getListCellRendererComponent()
      }
    }
  }
  

  namespace orders {
    namespace view.renderers {
      class orders.view.renderers.ImageRenderer {
          ~ pane : JPanel
          + ImageRenderer()
          + getListCellRendererComponent()
      }
    }
  }
  

  namespace orders {
    namespace view.renderers {
      class orders.view.renderers.OrderApplicationRenderer {
          ~ pane : JPanel
          + OrderApplicationRenderer()
          + getListCellRendererComponent()
      }
    }
  }
  

  namespace orders {
    namespace view.renderers {
      class orders.view.renderers.OrderRenderer {
          ~ pane : JPanel
          - isIn : boolean
          + OrderRenderer()
          + getListCellRendererComponent()
      }
    }
  }
  

  namespace orders {
    namespace view.renderers {
      class orders.view.renderers.UserRenderer {
          ~ pane : JPanel
          + UserRenderer()
          + getListCellRendererComponent()
      }
    }
  }
  

  orders.view.renderers.GalleryRenderer .up.|> javax.swing.ListCellRenderer
  orders.view.renderers.GalleryRenderer -up-|> javax.swing.JPanel
  orders.view.renderers.ImageRenderer .up.|> javax.swing.ListCellRenderer
  orders.view.renderers.ImageRenderer -up-|> javax.swing.JPanel
  orders.view.renderers.OrderApplicationRenderer .up.|> javax.swing.ListCellRenderer
  orders.view.renderers.OrderApplicationRenderer -up-|> javax.swing.JPanel
  orders.view.renderers.OrderRenderer .up.|> javax.swing.ListCellRenderer
  orders.view.renderers.OrderRenderer -up-|> javax.swing.JPanel
  orders.view.renderers.UserRenderer .up.|> javax.swing.ListCellRenderer
  orders.view.renderers.UserRenderer -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
